services/blog-admin/overlays/prod/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: admin-api-strip
  namespace: prof-prod-apps
spec:
  replacePathRegex:
    regex: "^/v1/(.*)"
    replacement: "/api/v1/$1"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-https
  namespace: prof-prod-apps
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
