services/blog-admin/overlays/prod/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog-admin-route
  namespace: prof-prod-apps
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`admin.prof-stankin.ru`) && (PathPrefix(`/v1/auth`) || PathPrefix(`/v1/user/me/avatar`) ||PathPrefix(`/v1/user`))
      kind: Rule
      priority: 100
      services:
        - name: personal-app
          port: 80
      middlewares:
        - name: admin-api-strip
        - name: force-https

    - match: Host(`admin.prof-stankin.ru`) && (PathPrefix(`/v1/core`) || PathPrefix(`/v1/categories`) || PathPrefix(`/v1/articles`) || PathPrefix(`/v1/blocks`))
      kind: Rule
      priority: 100
      services:
        - name: blog-api-svc
          port: 80
      middlewares:
        - name: admin-api-strip
        - name: force-https

    - match: Host(`admin.prof-stankin.ru`) && PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: blog-admin-svc
          port: 80
  tls:
    secretName: blog-admin-tls
